...
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="360dp"
...
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_below="@+id/age"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="312dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_outline_white_24dp"
        android:ems="10"
...
        android:ems="10"
        android:hint="@string/enter_your_education"
        android:inputType=""
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/occupation"
        app:layout_constraintEnd_toEndOf="@+id/occupation"
        app:layout_constraintStart_toStartOf="@+id/occupation"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
...
