...
    <string name="enter_email_address">Enter Your Email Address</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="enter_your_occupation">Enter Your Occupation</string>
    <string name="enter_your_education">Enter Your Education</string>
    <string name="log_in">Log In</string>
    <string name="tell_us_about_yourself">Tell Us About Yourself</string>
    <string name="marian_hart">Marian Hart</string>
    <string name="director_of_project_management_at_goldenphase_solar">Director of Project Management at GoldenPhase Solar</string>
    <string name="syracuse_university_new_york">Syracuse University - New York</string>
    <string name="i_m_a_renewable_energy_executive_with_10_years_of_experience_and_have_built_strong_skills_in_getting_companies"></string>
    <string name="sign_in">Sign In</string>
    <string name="tinder_like_logo">tinder_like_logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="matches_fragment">Matches Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="action_settings">Action Settings</string>
    <string name="age">Age</string>
</resources>
