...
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/pro_logo"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabTextColor="@color/tab_text_color"
        app:tabIndicatorColor="@color/tab_indicator_color"
...
