...
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:elevation="2dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/marian_hart"
...
